--- a/customization.cfg
+++ b/customization.cfg
@@ -54,7 +54,7 @@ CUSTOM_LLVM_PATH=""
 _force_all_threads="true"
 
 # Set to true to prevent ccache from being used and set CONFIG_GCC_PLUGINS=y (which needs to be disabled for ccache to work properly)
-_noccache="true"
+_noccache="false"
 
 # Build only a subset of the default kernel modules list to speedup compile time and lower needed space to build kernel
 # Important: - The kernel may fail to boot or behave weirdly with this option active. If it is the case, disable it and rebuild
@@ -259,7 +259,7 @@ _kernel_localversion=""
 # Set to your maximum number of CPUs (physical + logical cores) - Lower means less overhead - You can set it to "$(nproc)" to use the current host's CPU(s) core count, or leave empty to use default
 # If you set this to a lower value than you have cores, some cores will be disabled
 # Default Arch kernel value is 320
-_NR_CPUS_value="$(($(nproc) + 4))"
+_NR_CPUS_value="$(($(nproc) + 2))"
 
 # [non-Arch only] Install kernel after the building is done ?
 # Options are: "yes", "no", "prompt"
@@ -272,13 +272,13 @@ _logging_use_script="no"
 # Important:
 # - If you encounter issues, _ONLY_ report a bug if you have tried a kernel with this variable left blank
 # - Do _NOT_ activate SIMD instructions (i.e do not add e.g. "-mavx") or it will break your system
-KCFLAGS=""
+KCFLAGS="-fno-semantic-interposition"
 
 # [Advanced] Extra flags to pass to the compiler, for C++ files
 # Important:
 # - If you encounter issues, _ONLY_ report a bug if you have tried a kernel with this variable left blank
 # - Do _NOT_ activate SIMD instructions (i.e do not add e.g. "-mavx") or it will break your system
-KCPPFLAGS=""
+KCPPFLAGS="-fno-semantic-interposition"
 
 #### LEGACY OPTIONS ####
 
