--- a/customization.cfg
+++ b/customization.cfg
@@ -118,7 +118,7 @@ _cpusched="bore"
 
 # Compiler to use - Options are "gcc" or "llvm".
 # For advanced users.
-_compiler="llvm"
+_compiler="gcc"
 
 # [Generic and Gentoo specific] Replace `libunwind` with `llvm-libunwind`.
 # ! This is currently experimental.
@@ -215,10 +215,10 @@ _bore_min_base_slice_ns="1000000"
 _random_trust_cpu="true"
 
 # Timer frequency - "100" "250" "300" "500" "750" "1000" - More options available in kernel config prompt when left empty depending on selected cpusched with the default option pointed with a ">" (100 for muqss and 1000 for other cpu schedulers)
-_timer_freq="250"
+_timer_freq="100"
 
 # Default CPU governor - "performance", "ondemand", "schedutil" or leave empty for default (schedutil)
-_default_cpu_gov="ondemand"
+_default_cpu_gov="schedutil"
 
 # Use an aggressive ondemand governor instead of default ondemand to improve performance on low loads/high core count CPUs while keeping some power efficiency from frequency scaling.
 # It still requires you to either set ondemand as default governor or to select it in some way at runtime.
@@ -234,7 +234,7 @@ _tcp_cong_alg="bbr"
 _custom_commandline="intel_pstate=passive split_lock_detect=off"
 
 # Selection of Clearlinux patches
-_clear_patches="false"
+_clear_patches="true"
 
 # Add OpenRGB compatibility for certain i2c controllers - https://gitlab.com/CalcProgrammer1/OpenRGB/-/blob/master/OpenRGB.patch
 _openrgb="false"
@@ -296,7 +296,7 @@ _fsync_legacy="false"
 _fsync_futex2="false"
 
 # Set to "true" to add back missing symbol for AES-NI/AVX support on ZFS - This is a legacy option that can be ignored on 5.10+ kernels - https://github.com/NixOS/nixpkgs/blob/master/pkgs/os-specific/linux/kernel/export_kernel_fpu_functions.patch
-_zfsfix="false"
+_zfsfix="true"
 
 # MuQSS only - CPU scheduler runqueue sharing - No sharing (RQ_NONE), SMT (hyperthread) siblings (RQ_SMT), Multicore siblings (RQ_MC), Symmetric Multi-Processing (RQ_SMP), NUMA (RQ_ALL)
 # Valid values are "none", "smt", "mc", "mc-llc"(for zen), "smp", "all" - Kernel default is "smt"
