--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,14 +62,13 @@ jobs:
           max-size: "5000MB"
 
       - name: 🌍 Set CCACHE_DIR environment variable
-        run: echo "CCACHE_DIR=${{ runner.temp }}/ccache_temp_dir" >> $GITHUB_ENV
+        run: |
+          echo "CCACHE_DIR=${{ runner.temp }}/ccache_temp_dir" >> $GITHUB_ENV
+          sudo mkdir -p ${{ env.CCACHE_DIR }}
 
       - name: 📂 Set up CCACHE_DIR mount
         run: |
-          sudo apt-get -qq purge build-essential ghc*
-          sudo apt-get clean
-          docker system prune -af
-          mkdir -p ${{ env.CCACHE_DIR }}
+          sudo mkdir -p /mnt/ccache
           sudo mount --bind ${{ env.CCACHE_DIR }} /mnt/ccache
           export CCACHE_DIR=/mnt/ccache
           df -h
