--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: 📂 Set up CCACHE_DIR mount
         run: |
-          sudo mkdir -p ${{ env.CCACHE_DIR }}
+          mkdir -p ${{ env.CCACHE_DIR }}
           sudo mkdir -p /mnt/ccache
           sudo mount --bind ${{ env.CCACHE_DIR }} /mnt/ccache
           export CCACHE_DIR=/mnt/ccache
