--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
         shell: bash
 
     steps:
-      #- name: 👉🏻🗑️ Free Disk Space
-      #  uses: jlumbroso/free-disk-space@main
-      #  with:
-      #    swap-storage: true
+      - name: 👉🏻🗑️ Free Disk Space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          swap-storage: true
 
       - name: 🛒 Checkout repository
         uses: actions/checkout@v4
@@ -53,25 +53,29 @@ jobs:
       - name: 🧠 Set Swap Space
         uses: pierotofy/set-swap-space@master
         with:
-          swap-size-gb: 5
+          swap-size-gb: 10
+
+      - name: 🌍 Set CCACHE_DIR environment variable
+        run: |
+          echo "CCACHE_DIR=${{ runner.temp }}/ccache_temp_dir" >> $GITHUB_ENV
+
+      - name: 📂 Set up CCACHE_DIR mount
+        run: |
+          mkdir -p ${{ env.CCACHE_DIR }}
+          sudo mkdir -p /mnt/ccache
+          sudo mount --bind ${{ env.CCACHE_DIR }} /mnt/ccache
+          export CCACHE_DIR=/mnt/ccache
+          df -h
 
       - name: 💾 ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
-          create-symlink: true
-          max-size: "5000MB"
-
-      #- name: 🌍 Set CCACHE_DIR environment variable
-      #  run: |
-      #    echo "CCACHE_DIR=${{ runner.temp }}/ccache_temp_dir" >> $GITHUB_ENV
-
-      #- name: 📂 Set up CCACHE_DIR mount
-      #  run: |
-      #    mkdir -p ${{ env.CCACHE_DIR }}
-      #    sudo mkdir -p /mnt/ccache
-      #    sudo mount --bind ${{ env.CCACHE_DIR }} /mnt/ccache
-      #    export CCACHE_DIR=/mnt/ccache
-      #    df -h
+          #create-symlink: true
+          max-size: "10000MB"
+          path: ${{ env.CCACHE_DIR }}
+          key: kernel-build-${{ runner.os }}-${{ hashFiles('Makefile', 'arch/*/Makefile', '.config') }
+          restore-keys: |
+            kernel-build-${{ runner.os }}-
 
       - name: 🐎 Install deps and compile kernel
         run: yes '' | ./install.sh install
