--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       #    mkdir -p ${{ runner.temp }}/ccache_temp_dir
 
       - name: 🌍 Set CCACHE environment variables
-        if: ${{ env._noccache != 'false' && env.compiler = 'gcc' }}
+        if: ${{ env._noccache != 'false' }}
         run: |
           echo "CCACHE_SLOPPINESS=file_macro,locale,time_macros" >> $GITHUB_ENV
           echo "CCACHE_NOHASHDIR=true" >> $GITHUB_ENV
