--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Build Custom Kernel DEB
-'on':
+on:
   workflow_dispatch: null
   workflow_call:
     inputs:
@@ -15,9 +15,7 @@ permissions:
   contents: read
 
 env:
-  _modprobeddb_db_path: '${{ github.workspace }}/modprobed.db'
-  #_kernel_work_folder: "/tmp"
-  #_kernel_source_folder: "/tmp"
+  _modprobeddb_db_path: ${{ github.workspace }}/modprobed.db
 
 jobs:
   build_kernel:
@@ -39,18 +37,22 @@ jobs:
           fetch-depth: 1
 
       - name: 📝 Get variables from config
-        run: |
-            CPUSCHED1=$(grep "cpusched=" customization.cfg | grep -Po '(?<=").*(?=")')
-            echo "_cpusched=$CPUSCHED1" >> $GITHUB_ENV
-            NOCCACHE1=$(grep "noccache=" customization.cfg | grep -Po '(?<=").*(?=")')
-            echo "_noccache=$NOCCACHE1" >> $GITHUB_ENV
-            COMPILER1=$(grep "compiler=" customization.cfg | grep -Po '(?<=").*(?=")')
-            echo "_compiler=$COMPILER1" >> $GITHUB_ENV
+        run: >
+          CPUSCHED1=$(grep "cpusched=" customization.cfg | grep -Po '(?<=").*(?=")')
+          echo "_cpusched=$CPUSCHED1" >> $GITHUB_ENV
+
+          NOCCACHE1=$(grep "noccache=" customization.cfg | grep -Po '(?<=").*(?=")')
+          echo "_noccache=$NOCCACHE1" >> $GITHUB_ENV
+
+          COMPILER1=$(grep "compiler=" customization.cfg | grep -Po '(?<=").*(?=")')
+          echo "_compiler=$COMPILER1" >> $GITHUB_ENV
 
       - name: 📦 Install build dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: bc bison build-essential ccache cpio fakeroot flex git kmod libdw-dev libelf-dev libncurses-dev libssl-dev lz4 rsync schedtool wget zstd lld pkg-config devscripts make gcc debhelper llvm clang
+          packages: bc bison build-essential ccache cpio fakeroot flex git kmod libdw-dev
+            libelf-dev libncurses-dev libssl-dev lz4 rsync schedtool wget zstd
+            lld pkg-config devscripts make gcc debhelper llvm clang
           version: 1.1
           execute_install_scripts: true
 
@@ -59,13 +61,8 @@ jobs:
         with:
           swap-size-gb: 10
 
-      #- name: 🌍 Set CCACHE_DIR environment variable
-      #  run: |
-      #    echo "CCACHE_DIR=${{ runner.temp }}/ccache_temp_dir" >> $GITHUB_ENV
-      #    mkdir -p ${{ runner.temp }}/ccache_temp_dir
-
       - name: 🌍 Set CCACHE environment variables
-        if: ${{ env._noccache != 'false' }}
+        if: ${{ env._noccache != 'false' && env.compiler = 'gcc' }}
         run: |
           echo "CCACHE_SLOPPINESS=file_macro,locale,time_macros" >> $GITHUB_ENV
           echo "CCACHE_NOHASHDIR=true" >> $GITHUB_ENV
@@ -99,13 +96,14 @@ jobs:
           df -h
 
       - name: 🏃 CCACHE
+        if: ${{ env._noccache != 'false' }}
         uses: hendrikmuhs/ccache-action@v1.2
         with:
-          if: env._noccache != 'false'
           create-symlink: "true"
-          max-size: "10000MB"
+          max-size: 10000MB
           verbose: 2
-          key: kernel-build-${{ runner.os }}-${{ hashFiles('Makefile', 'arch/*/Makefile', '.config') }}
+          key: kernel-build-${{ runner.os }}-${{ hashFiles('Makefile', 'arch/*/Makefile',
+            '.config') }}
           restore-keys: |
             kernel-build-${{ runner.os }}-
 
