--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,14 +144,19 @@ jobs:
       - name: 🧹🪣 Cleanup useless DEB files
         run: rm -rf DEBS/*dbg*.deb DEBS/*libc-dev*.deb 2>/dev/null || true
       - name: 𝐍𝐚𝐦𝐞 rename kernel config
-        run: 'mv kernelconfig.new kernelconfig.ubuntu.${{ env._cpusched }}.txt'
+        run: |
+        'mv kernelconfig.new kernelconfig.ubuntu.${{ env._cpusched }}.txt'
+        MYKVER=$(grep "VERSION = " linux-src-git/Makefile | cut -d '=' -f 2 | grep -oE '^\s*[0-9]+')
+        MYKPATCH=$(grep "PATCHLEVEL = " linux-src-git/Makefile | cut -d '=' -f 2 | grep -oE '^\s*[0-9]+')
+        MYKSUBLEVEL=$(grep "SUBLEVEL = " linux-src-git/Makefile | cut -d '=' -f 2 | grep -oE '^\s*[0-9]+')
+        echo "_kernver={$MYKVER}.${MYKPATCH}.${MYSUBLEVEL}"  >> $GITHUB_ENV
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           compression-level: 6
           retention-days: 30
-          name: 'ubuntu-kernel-packages-${{ env._cpusched }}'
+          name: 'ubuntu-kernel-${{ env._kernver }}-packages-${{ env._cpusched }}'
           path: |
             DEBS/*.deb
             kernelconfig*.txt
