--- a/customization.cfg
+++ b/customization.cfg
@@ -114,7 +114,7 @@ _STRIP="true"
 # CPU scheduler - Options are "pds", "bmq", "bore", "cfs" (linux 6.5-) or "eevdf" (kernel's default, 6.6+)
 # "upds" (TkG's Undead PDS) and "muqss" are also available on legacy kernel revisions
 # If unsure, select "eevdf" (default)
-_cpusched="bore"
+_cpusched="bmq"
 
 # Compiler to use - Options are "gcc" or "llvm".
 # For advanced users.
